drop downmenu ist in der fertigung sicherheitscommit

--- a/boardView/index.html
+++ b/boardView/index.html
@@ -97,13 +97,12 @@
             <p>Description</p>
             <input type="text" placeholder="Enter a Description">
             <p>Assigned to</p>
+            <input type="text" placeholder="Select contacts to assign">
+            <img class="dropDownArrow" src="../assets/icon/arrow_drop_down.svg" alt="arrowDown">
             <div class="container">
-              <select id="contact">
-                <option value="" disabled selected>Select contacts to assign</option>
-                <option value="männlich">Männlich</option>
-                <option value="weiblich">Weiblich</option>
-                <option value="divers">Divers</option>
-              </select>
+              <div class="contact">
+                
+              </div>
             </div>
           </div>
         </div>
