--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -16,7 +16,8 @@
   <link rel="stylesheet" href="../contactsView/style/contact.css">
   <link rel="stylesheet" href="../contactsView/style/responsive-contact.css">
   <script src="../contactsView/script/script.js"></script>
-  <script src="./script.js" defer></script>
+  <script src="./script/script.js" defer></script>
+  <script src="./script/boardScript.js"></script>
   <script src="../contactsView/script/script.js" defer></script>
   <script src="../loginView/scripts/firebase-realtime.js"></script>
   <title>Header-Navbar</title>
