--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -64,7 +64,7 @@
         <a href="">
           <img class="question-icon" src="../assets/icon/default-icon.svg" alt="" />
         </a>
-        <img class="mobile-logo" src="/assets/img/logo-black.svg" alt="" />
+        <img class="mobile-logo" src="../assets/img/logo-black.svg" alt="" />
 
         <div class="account" onclick="">
           <p>SM</p>
