--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="../contactsView/style/responsive-contact.css">
   <script src="../contactsView/script/script.js"></script>
   <script src="./script/script.js" defer></script>
-  <script src="./script/boardScript.js"></script>
+  <script src="../boardView/script/script.js"></script>
   <script src="../contactsView/script/script.js" defer></script>
   <script src="../loginView/scripts/firebase-realtime.js"></script>
   <title>Header-Navbar</title>
