--- a/boardView/index.html
+++ b/boardView/index.html
@@ -90,10 +90,10 @@
       <div class="addTask">
         <div class="task">
           <p class="headerText">Title</p>
-          <input type="text" placeholder="Enter a title">
+          <input id="titleInputId" type="text" placeholder="Enter a title">
           <p class="headerText">Description</p>
           <div class="containerDescription">
-            <input class="description" type="text" placeholder="Enter a Description">
+            <input id="descriptionInputId" class="description" type="text" placeholder="Enter a Description">
             <img src="../assets/icon/recurso.svg" alt="">
           </div>
           <p class="headerText">Assigned to</p>
