--- a/boardView/index.html
+++ b/boardView/index.html
@@ -171,7 +171,7 @@
             <div class="d_none" id="deleteOrSave">
               <img class="rotateToDeleteBtn" onclick="deleteInput()" src="../assets/icon/add.svg" alt="deleteBtn">
               <div class="smallLine"></div>
-              <svg onclick="addSubtaskToArray()" id="checkSubtasks" width="24" height="25" viewBox="0 0 24 25"
+              <svg onclick="addSubtaskToArray()" class="pointer" id="checkSubtasks" width="24" height="25" viewBox="0 0 24 25"
                 fill="black" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_191_600" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="24"
                   height="25">
@@ -186,7 +186,7 @@
           </div>
           <div class="subtasksContent" id="subtasksContentId"></div>
           <div class="overlayButtons">
-            <p class="cancelBtn" onclick="toggleOverlay()">
+            <p class="cancelBtn" onclick="toggleAddTaskOverlay()">
               Cancel<img src="/assets/icon/Close.svg" alt="cancelIcon" />
             </p>
             <button class="createBtn" onclick="addTaskToFirebase()">
