--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -51,8 +51,8 @@
         </div>
 
         <div class="nav-links">
-          <a class="privacy-policy" href="">Privacy Policy</a>
-          <a class="legal-notice" href="">Legal notice</a>
+          <a class="privacy-policy">Privacy Policy</a>
+          <a class="legal-notice">Legal notice</a>
         </div>
       </div>
     </nav>
