--- a/boardView/index.html
+++ b/boardView/index.html
@@ -56,8 +56,7 @@
           <img class="column-add-button" src="/assets/icon/add-button.svg" alt="" />
         </div>
         <div class="lower-column">
-          <div class="no-task">No tasks To do</div>
-          <div ondrop="drop(event)" ondragover="allowDrop(event)" class="content" id="content1"></div>
+          <div ondrop="drop(event)" ondragover="allowDrop(event)" class="content" id="contentProgress"></div>
         </div>
       </div>
 
@@ -67,8 +66,7 @@
           <img class="column-add-button" src="/assets/icon/add-button.svg" alt="" />
         </div>
         <div class="lower-column">
-          <div class="no-task">No tasks To do</div>
-          <div ondrop="drop(event)" ondragover="allowDrop(event)" class="content" id="content-feedback"></div>
+          <div ondrop="drop(event)" ondragover="allowDrop(event)" class="content" id="contentFeedback"></div>
         </div>
       </div>
 
@@ -78,8 +76,7 @@
           <img class="column-add-button" src="/assets/icon/add-button.svg" alt="" />
         </div>
         <div class="lower-column">
-          <div class="no-task">No tasks To do</div>
-          <div ondrop="drop(event)" ondragover="allowDrop(event)" class="content" id="content-done"></div>
+          <div ondrop="drop(event)" ondragover="allowDrop(event)" class="content" id="contentDone"></div>
         </div>
       </div>
 
@@ -171,7 +168,7 @@
             <div class="d_none" id="deleteOrSave">
               <img class="rotateToDeleteBtn" onclick="deleteInput()" src="../assets/icon/add.svg" alt="deleteBtn">
               <div class="smallLine"></div>
-              <svg onclick="addSubtaskToArray()" class="pointer" id="checkSubtasks" width="24" height="25" viewBox="0 0 24 25"
+              <svg onclick="addSubtaskToArray()" id="checkSubtasks" width="24" height="25" viewBox="0 0 24 25"
                 fill="black" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_191_600" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="24"
                   height="25">
