--- a/legalNotice/index.html
+++ b/legalNotice/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/resopnsive-header.css" />
     <link rel="stylesheet" href="styles/responsive-navbar.css" />
     <link rel="stylesheet" href="styles/legal-notice.css" />
-    <script src="scripts/script.js"></script>
+    <script src="../header-navbar/script/script.js"></script>
 
     <title>Join - Legal Notice</title>
   </head>
@@ -39,12 +39,12 @@
             <p>Add task</p>
           </div>
 
-          <div class="board-button">
+          <div class="board-button" onclick="loadBoardView()">
             <img class="nav-icon" src="../assets/icon/board-icon.svg" alt="" />
             <p>Board</p>
           </div>
 
-          <div class="contacts-button">
+          <div class="contacts-button" onclick="loadContactsView()">
             <img
               class="nav-icon"
               src="../assets/icon/contacts-icon.svg"
