--- a/privacyPolicy/index.html
+++ b/privacyPolicy/index.html
@@ -8,63 +8,69 @@
     <link rel="stylesheet" href="styles/standart.css" />
     <link rel="stylesheet" href="styles/resopnsive-header.css" />
     <link rel="stylesheet" href="styles/privacy-policy.css" />
-    <script src="scripts/script.js"></script>
+    <script src="../header-navbar/script/script.js"></script>
 
     <title>Join - Privacy Policy</title>
   </head>
   <body>
-
     <section class="leftSide">
-    <nav>
-      <img class="logo" src="../assets/img/logo-white.svg" alt="" />
+      <nav>
+        <img class="logo" src="../assets/img/logo-white.svg" alt="" />
 
-      <div class="menu">
-        <div class="menu-buttons">
-          <div class="summery-button">
-            <img
-              class="nav-icon"
-              src="../assets/icon/summary-icon.svg"
-              alt=""
-            />
-            <p>Summary</p>
+        <div class="menu">
+          <div class="menu-buttons">
+            <div class="summery-button">
+              <img
+                class="nav-icon"
+                src="../assets/icon/summary-icon.svg"
+                alt=""
+              />
+              <p>Summary</p>
+            </div>
+
+            <div class="add-tast-button">
+              <img
+                class="nav-icon"
+                src="../assets/icon/add-task-icon.svg"
+                alt=""
+              />
+              <p>Add task</p>
+            </div>
+
+            <div class="board-button" onclick="loadBoardView()">
+              <img
+                class="nav-icon"
+                src="../assets/icon/board-icon.svg"
+                alt=""
+              />
+              <p>Board</p>
+            </div>
+
+            <div class="contacts-button" onclick="loadContactsView()">
+              <img
+                class="nav-icon"
+                src="../assets/icon/contacts-icon.svg"
+                alt=""
+              />
+              <p>Contacts</p>
+            </div>
           </div>
 
-          <div class="add-tast-button">
-            <img
-              class="nav-icon"
-              src="../assets/icon/add-task-icon.svg"
-              alt=""
-            />
-            <p>Add task</p>
-          </div>
-
-          <div class="board-button">
-            <img class="nav-icon" src="../assets/icon/board-icon.svg" alt="" />
-            <p>Board</p>
-          </div>
-
-          <div class="contacts-button">
-            <img
-              class="nav-icon"
-              src="../assets/icon/contacts-icon.svg"
-              alt=""
-            />
-            <p>Contacts</p>
+          <div class="nav-links">
+            <a class="privacy-policy" href="/privacyPolicy/index.html"
+              >Privacy Policy</a
+            >
+            <a class="legal-notice" href="/legalNotice/index.html"
+              >Legal notice</a
+            >
           </div>
         </div>
-
-        <div class="nav-links">
-          <a class="privacy-policy" href="/privacyPolicy/index.html">Privacy Policy</a>
-          <a class="legal-notice" href="/legalNotice/index.html">Legal notice</a>
-        </div>
-      </div>
-    </nav>
-  </section>
-    
+      </nav>
+    </section>
 
     <section class="rightSide">
       <header>
-        <h4>Kanban Project Management Tool</h4>
+        <h3>Kanban Project Management Tool</h3>
         <div class="header-div">
           <!-- <a href="">
             <img
@@ -74,7 +80,7 @@
             />
           </a> -->
           <img class="mobile-logo" src="/assets/img/logo-black.svg" alt="" />
-  
+
           <!-- <div class="account" onclick="">
             <p>SM</p>
           </div> -->
@@ -87,126 +93,153 @@
         </a>
 
         <h1>Privacy Policy</h1>
-        <p>
-          Welcome to the help page for <span class="blue">Join</span>, your
-          guide to using our kanban project management tool. Here, we'll provide
-          an overview of what <span class="blue">Join</span> is, how it can
-          benefit you, and how to use it.
-        </p>
 
-        <h2>What is <span class="blue">Join</span> ?</h2>
+        <h2>Introduction</h2>
         <p>
-          
-          <span class="blue">Join</span> is a kanban-based project management
-          tool designed and built by a group of dedicated students as part of
-          their web development bootcamp at the Developer Akademie.
+          Welcome to Join! Adventure GmbH. We are committed to protecting your
+          privacy and ensuring that your personal information is handled in a
+          safe and responsible way. This Privacy Policy explains how we collect,
+          use, and share information when you visit our website,
+          <span class="link">LINKLINKLINKLINKLINKLINK</span>, or use our
+          services.
         </p>
-
-        <p>
-          Kanban, a Japanese term meaning "billboard", is a highly effective
-          method to visualize work, limit work-in-progress, and maximize
-          efficiency (or flow). <span class="blue">Join</span> leverages the
-          principles of kanban to help users manage their tasks and projects in
-          an intuitive, visual interface.
-        </p>
-
-        <p>
-          It is important to note that <span class="blue">Join</span> is
-          designed as an educational exercise and is not intended for extensive
-          business usage. While we strive to ensure the best possible user
-          experience, we cannot guarantee consistent availability, reliability,
-          accuracy, or other aspects of quality regarding
-          <span class="blue">Join</span>.
-        </p>
-
-        <h3>How to use it</h3>
-        <p>
-          How to use it Here is a step-by-step guide on how to use
-          <span class="blue">Join</span>:
-        </p>
+        <div class="how-to-use-div">
+          <div class="number"></div>
+          <div>
+            <h3 class="h3">1. Information We Collect</h3>
+            <p>We may collect the following types of personal information:</p>
+            <ul>
+              <li>
+                <span class="infoPolicy"
+                  >Personal Identification Information: </span
+                >Name, email address, phone number, address, and other
+                information you voluntarily provide.
+              </li>
+              <br />
+              <li>
+                <span class="infoPolicy">Usage Data: </span>Information on how
+                you interact with our website and services, including IP
+                address, browser type, device information, and pages visited.
+              </li>
+              <br />
+              <li>
+                <span class="infoPolicy"
+                  >Cookies and Tracking Technologies: </span
+                >We may use cookies and similar tracking technologies to enhance
+                your experience and collect information on your browsing
+                behavior.
+              </li>
+            </ul>
+          </div>
+        </div>
 
         <div class="how-to-use-div">
-          <div class="number">1.</div>
+          <div class="number"></div>
+
           <div>
-            <h4 class="h4">Exploring the Board</h4>
+            <h3 class="h3">2. How We Use Your Information</h3>
+            <p>We use your information for various purposes, including:</p>
+            <ul>
+              <li>
+                <span class="infoPolicy"
+                  >Providing and Improving Our Services: </span
+                >To deliver the services you request and improve our website.
+              </li>
+              <br />
+              <li>
+                <span class="infoPolicy">Communication: </span>To send updates,
+                promotional materials, or respond to inquiries.
+              </li>
+              <br />
+              <li>
+                <span class="infoPolicy">Analytics and Performance: </span>To
+                analyze usage trends and monitor website performance.
+              </li>
+              <br />
+              <li>
+                <span class="infoPolicy"
+                  >Compliance and Legal Obligations: </span
+                >To fulfill legal requirements and enforce our terms.
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="how-to-use-div">
+          <div class="number"></div>
+
+          <div>
+            <h3 class="h3">3. How We Share Your Information</h3>
+            <p>We may share your personal information with:</p>
+            <ul>
+              <li>
+                <span class="infoPolicy">Service Providers: </span>Third-party
+                vendors who assist in providing our services (e.g., payment
+                processors, hosting services).
+              </li>
+              <br />
+              <li>
+                <span class="infoPolicy">Legal Requirements: </span>When
+                required by law or necessary to protect our rights, we may share
+                information with law enforcement or other authorities.
+              </li>
+              <br />
+              <li>
+                <span class="infoPolicy">Business Transfers: </span>In case of
+                mergers, acquisitions, or asset sales, your information may be
+                transferred to the new owner.
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="how-to-use-div">
+          <div class="number"></div>
+
+          <div>
+            <h3 class="h3">4. Data Security</h3>
             <p>
-              When you log in to <span class="blue">Join</span>, you'll find a
-              default board. This board represents your project and contains
-              four default lists: "To Do", "In Progress", "Await feedback" and
-              "Done".
+              We take reasonable measures to protect your personal information
+              from unauthorized access, alteration, disclosure, or destruction.
+              However, no method of transmission over the internet or method of
+              electronic storage is completely secure.
             </p>
           </div>
         </div>
 
         <div class="how-to-use-div">
-          <div class="number">2.</div>
+          <div class="number"></div>
 
           <div>
-            <h4 class="h4">Creating Contacts</h4>
+            <h3 class="h3">5. Your Rights</h3>
             <p>
-              In <span class="blue">Join</span>, you can add contacts to
-              collaborate on your projects. Go to the "Contacts" section, click
-              on "New contact", and fill in the required information. Once
-              added, these contacts can be assigned tasks and they can interact
-              with the tasks on the board.
+              Depending on your location, you may have the following rights:
             </p>
+            <ul>
+              <li>
+                <span class="infoPolicy">Access and Correction: </span>Request
+                access to or correction of your personal information.
+              </li>
+              <br />
+              <li>
+                <span class="infoPolicy">Deletion: </span>Request the deletion
+                of your data where legally applicable.
+              </li>
+              <br />
+              <li>
+                <span class="infoPolicy">Objection and Restriction: </span
+                >Object to or request restriction of processing of your personal
+                data.
+              </li>
+              <br />
+              <li>
+                <span class="infoPolicy">Data Portability: </span>Request
+                transfer of your data to another service.
+              </li>
+            </ul>
           </div>
         </div>
-
-        <div class="how-to-use-div">
-          <div class="number">3.</div>
-
-          <div>
-            <h4 class="h4">Adding Cards</h4>
-            <p>
-              Now that you've added your contacts, you can start adding cards.
-              Cards represent individual tasks. Click the "+" button under the
-              appropriate list to create a new card. Fill in the task details in
-              the card, like task name, description, due date, assignees, etc.
-            </p>
-          </div>
-        </div>
-
-        <div class="how-to-use-div">
-          <div class="number">4.</div>
-
-          <div>
-            <h4 class="h4">Moving Cards</h4>
-            <p>
-              As the task moves from one stage to another, you can reflect that
-              on the board by dragging and dropping the card from one list to
-              another.
-            </p>
-          </div>
-        </div>
-
-        <div class="how-to-use-div">
-          <div class="number">5.</div>
-
-          <div>
-            <h4 class="h4">Deleting Cards</h4>
-            <p>
-              Once a task is completed, you can either move it to the "Done"
-              list or delete it. Deleting a card will permanently remove it from
-              the board. Please exercise caution when deleting cards, as this
-              action is irreversible.
-            </p>
-
-            <p>
-              Remember that using <span class="blue">Join</span> effectively
-              requires consistent updates from you and your team to ensure the
-              board reflects the current state of your project.
-            </p>
-
-            <p>
-              Have more questions about <span class="blue">Join</span> ? feel
-              free to contact us at
-              <a href="mailto:support@join.com">support@join.com</a>. We're here
-              to help you!
-            </p>
-          </div>
-        </div>
-
+        <br />
         <h3 class="enjoy-h3">Enjoy using <span class="blue">Join</span>!</h3>
       </main>
     </section>
