--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -51,8 +51,8 @@
         </div>
 
         <div class="nav-links">
-          <a class="privacy-policy">Privacy Policy</a>
-          <a class="legal-notice">Legal notice</a>
+          <a href="../privacyPolicy/index.html" class="privacy-policy">Privacy Policy</a>
+          <a href="../legalNotice/index.html" class="legal-notice">Legal notice</a>
         </div>
       </div>
     </nav>
