--- a/boardView/index.html
+++ b/boardView/index.html
@@ -76,7 +76,10 @@
           <img class="column-add-button" src="/assets/icon/add-button.svg" alt="" />
         </div>
         <div class="lower-column">
-          <div ondrop="drop(event)" ondragover="allowDrop(event)" class="content" id="contentDone"></div>
+          <div ondrop="drop(event)" ondragover="allowDrop(event)" class="content" id="contentDone">
+            
+            
+          </div>
         </div>
       </div>
 
