--- a/contactsView/index.html
+++ b/contactsView/index.html
@@ -8,11 +8,12 @@
   <link rel="icon" type="image/png" href="../assets/icon/Capa 1.png" />
   <script src="../loginView/scripts/firebase-realtime.js"></script>
   <script src="script/script.js"></script>
-  <link rel="stylesheet" href="style/overlay.css" />
-  <link rel="stylesheet" href="style/assets.css" />
-  <link rel="stylesheet" href="style/standart.css" />
-  <link rel="stylesheet" href="style/style.css" />
-  <link rel="stylesheet" href="style/contact.css" />
+  <link rel="stylesheet" href="../contactsView/style/overlay.css">
+  <link rel="stylesheet" href="../contactsView/style/assets.css">
+  <link rel="stylesheet" href="../contactsView/style/standart.css">
+  <link rel="stylesheet" href="../contactsView/style/style.css">
+  <link rel="stylesheet" href="../contactsView/style/contact.css">
+  <link rel="stylesheet" href="../contactsView/style/responsive-contact.css">
 </head>
 
 <body onload="renderContacts()">
