--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -8,13 +8,6 @@
   <link rel="stylesheet" href="styles/navbar.css" />
   <link rel="stylesheet" href="styles/standart.css" />
   <link rel="stylesheet" href="styles/resopnsive-header.css" />
-  <link rel="stylesheet" href="styles/responsive-navbar.css" />
-  <link rel="stylesheet" href="../contactsView/style/overlay.css">
-  <link rel="stylesheet" href="../contactsView/style/assets.css">
-  <link rel="stylesheet" href="../contactsView/style/standart.css">
-  <link rel="stylesheet" href="../contactsView/style/style.css">
-  <link rel="stylesheet" href="../contactsView/style/contact.css">
-  <link rel="stylesheet" href="../contactsView/style/responsive-contact.css">
   <script src="../contactsView/script/script.js"></script>
   <script src="./script/script.js" defer></script>
   <script src="../boardView/script/script.js"></script>
@@ -34,7 +27,7 @@
             <p onclick="activateOverlay()">Summary</p>
           </div>
 
-          <div class="add-tast-button">
+          <div class="add-tast-button" onclick="loadAddTaskView()">
             <img class="nav-icon" src="../assets/icon/add-task-icon.svg" alt="" />
             <p>Add task</p>
           </div>
