--- a/boardView/index.html
+++ b/boardView/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="/boardView/styles/boardNote.css" />
   <script src="../loginView/scripts/firebase-realtime.js"></script>
   <script src="script/script.js" defer></script>
+  <script src="script/templat.js" defer></script>
 
   <title>Board</title>
 </head>
