--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="../contactsView/style/overlay.css" />
   <script src="../contactsView/script/script.js"></script>
   <script src="./script/script.js" defer></script>
+  <script src="./script/template.js" defer></script>
+  <script src="./script/addTaskScript.js" defer></script>
   <script src="../boardView/script/script.js"></script>
   <script src="../contactsView/script/script.js" defer></script>
   <script src="../loginView/scripts/firebase-realtime.js"></script>
