--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles/navbar.css" />
   <link rel="stylesheet" href="styles/standart.css" />
   <link rel="stylesheet" href="styles/resopnsive-header.css" />
+  <link rel="stylesheet" href="styles/responsive-navbar.css" />
   <link rel="stylesheet" href="../contactsView/style/overlay.css" />
   <script src="../contactsView/script/script.js"></script>
   <script src="./script/script.js" defer></script>
