--- a/addTask/index.html
+++ b/addTask/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../addTask/styles/standart.css" />
   <link rel="stylesheet" href="../addTask/styles/style.css">
-  <script src="scripts/script.js"></script>
+  <script src="../addTask/script/script.js"></script>
 
   <title>Add Task</title>
 </head>
@@ -15,20 +15,19 @@
   <div class="body">
     <div class="header">
       <h1 class="headerHeadline">Add Task</h1>
-      <img src="../assets/icon/Close.svg" alt="closeButton" onclick="toggleAddTaskOverlay()">
     </div>
 
     <div id="addTask">
       <div class="task">
         <p class="headerText">Title</p>
-        <input id="titleInputId" type="text" placeholder="Enter a title">
+        <input class="inputFields" id="titleInputId" type="text" placeholder="Enter a title">
         <p class="headerText">Description</p>
         <input id="descriptionInputId" class="description" type="text" placeholder="Enter a Description">
         <img class="containerDescriptionImg" src="../assets/icon/recurso.svg" alt="">
         <p class="headerText">Assigned to</p>
-        <input onclick="toggleContactSelection()" class="contactSelection" type="text"
+        <input onclick="toggleContactSelection(); toggleDropdown()" class="contactSelection inputFields" type="text"
           placeholder="Select contacts to assign">
-        <img onclick="toggleContactSelection()" class="dropDownArrow" src="../assets/icon/arrow_drop_down.svg"
+        <img onclick="toggleContactSelection(); toggleDropdown()" class="dropDownArrow" src="../assets/icon/arrow_drop_down.svg"
           alt="arrowDown">
         <div class="container d_none" id="contactRender"></div>
       </div>
@@ -38,8 +37,8 @@
       <div class="right-side">
         <div class="dateCategory">
           <p class="headerText">Due date</p>
-          <input class="dateInput" id="dateInput" type="text" placeholder="dd/mm/yyyy">
-          <img src="../assets/icon/eventCalendar.svg" alt="calendarIcon" class="calendar-icon">
+          <input class="dateInput inputFields" id="dateInput" type="text" placeholder="dd/mm/yyyy">
+          <img src="../assets/icon/eventCalendar.svg" alt="calendarIcon" class="calendarIcon">
         </div>
         <div class="prio-buttons">
           <p class="headerText">Prio</p>
@@ -86,7 +85,7 @@
         </div>
         <div class="category">
           <p class="headerText">Category</p>
-          <select id="categorySelect" onclick="toggleArrow()" onchange="updateInputValue()">
+          <select class="inputFields" id="categorySelect" onclick="toggleArrow()" onchange="updateInputValue()">
             <option value="" disabled selected hidden>Select Category</option>
             <option onclick="updateInputValue()" value="Technical Task">Technical Task</option>
             <option onclick="updateInputValue()" value="User Story">User Story</option>
@@ -100,7 +99,7 @@
         </div>
         <div class="subtasks">
           <p class="headerText">Subtasks</p>
-          <input id="subtaskInputId" onkeyup="triggerInputButtons()" type="text">
+          <input class="inputFields" id="subtaskInputId" onkeyup="triggerInputButtons()" type="text">
           <img class="addSubtasksButton" id="addIconId" src="../assets/icon/add.svg" alt="">
           <div class="d_none" id="deleteOrSave">
             <img class="rotateToDeleteBtn" onclick="deleteInput()" src="../assets/icon/add.svg" alt="deleteBtn">
@@ -119,7 +118,7 @@
           </div>
         </div>
         <div class="subtasksContent" id="subtasksContentId"></div>
-        <div class="overlayButtons">
+        <div class="finalButtons">
           <p class="cancelBtn" onclick="toggleAddTaskOverlay()">
             Cancel<img src="/assets/icon/Close.svg" alt="cancelIcon" />
           </p>
