--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="styles/resopnsive-header.css" />
   <script src="../contactsView/script/script.js"></script>
   <script src="./script/script.js" defer></script>
+  <script src="./script/addTaskScript.js" defer></script>
   <script src="../boardView/script/script.js"></script>
   <script src="../contactsView/script/script.js" defer></script>
   <script src="../loginView/scripts/firebase-realtime.js"></script>
