Contacts Fertig außer animation Board fehlt suchen und plus und drag and drop und subtask counter add task fehlt  summary seite fehlt kmplett

--- a/privacyPolicy/index.html
+++ b/privacyPolicy/index.html
@@ -19,7 +19,7 @@
 
         <div class="menu">
           <div class="menu-buttons">
-            <div class="summery-button">
+            <div class="summery-button" href="">
               <img
                 class="nav-icon"
                 src="../assets/icon/summary-icon.svg"
