add Task fertig außer clear

--- a/addTask/index.html
+++ b/addTask/index.html
@@ -119,8 +119,8 @@
         </div>
         <div class="subtasksContent" id="subtasksContentId"></div>
         <div class="finalButtons">
-          <p class="cancelBtn" onclick="toggleAddTaskOverlay()">
-            Cancel<img src="/assets/icon/Close.svg" alt="cancelIcon" />
+          <p class="cancelBtn" onclick="resetInputAddTask()">
+            Clear<img src="/assets/icon/Close.svg" alt="cancelIcon" />
           </p>
           <button class="createBtn" onclick="addTaskToFirebase()">
             Create Task<img src="/assets/icon/check.svg" alt="" />
