splashView entfernt und als overlay auf loginpage hinzugefügt

--- a/loginView/index.html
+++ b/loginView/index.html
@@ -9,10 +9,15 @@
     <link rel="icon" type="image/png" href="../assets/icon/Capa 1.png">
     <link rel="stylesheet" href="./styles/assets.css">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/overlay.css">
     <script src="scripts/script.js"></script>
+    <script src="scripts/overlay.js"></script>
 </head>
 
 <body onload="onloadFunc()">
+
+    <div id="overlay" class="overlay"></div>
+    
     <header>
         <div class="logoDiv">
             <img class="headerLogo" src="../assets/icon/Capa 1.svg" alt="logo">
